# Elderly_Care

./:  RuView-Watch.odt   RuView-Watch.txt  AgentMemoryEngine_RUVIEW_PATCHED.rs  Cargo.toml  Grok_feedback.md  Mind-Capsule Revamp 4-11-2026.txt  PATCH_SUMMARY.md  README.md  Rats_Playground_Plan.txt  agent_memory_engine.py  agent_memory_engine_rs.d  brave_new_commune_memory.py  bravenewcommune3-patched.py  cli.rs  engine.rs  extract_odt.py  extract_patches.py  identity.rs  main.rs  memory.rdb  mindcapsule.txt  models.rs  myimageofwatch.html  perceptions-v1.txt  persistence.rs  requirements.txt  requirements2.txt  ruview.rs  ruview_wifi_csi_body_scanner(1).html  simple_extract.py  store.rs  watch_concepts_prototype_V1.txt
