[package]
name = "agent_memory_engine_rs"
version = "1.0.0-patched"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"
crc32fast = "1.4"
crossbeam-channel = "0.5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rustyline = "14.0"
sha2 = "0.10"
hex = "0.4"

# ── Patch 2: FFT / complex numbers ──────────────────────────────────
rustfft = "6.2"
num-complex = "0.4"

# ── Patch 1: UDP packet parsing ──────────────────────────────────────
bytes = "1"
nom = "7"

# ── Patch 4: Linear algebra + ring buffer ───────────────────────────
ndarray = { version = "0.15", features = ["rayon"] }
ringbuffer = "0.15"

# ── Patch 7: linfa ICA / clustering (optional drop-in) ───────────────
# linfa-ica = "0.7"
# linfa-clustering = "0.7"
# linfa = "0.7"
